--- a/.github/workflows/gradle-trycompile-win.yml
+++ b/.github/workflows/gradle-trycompile-win.yml
@@ -8,7 +8,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
       packages: write
