--- a/.github/workflows/gradle-trycompile-linux.yml
+++ b/.github/workflows/gradle-trycompile-linux.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Try Linux Compile
 
 on: [push]
 
@@ -22,6 +22,9 @@ jobs:
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+      name: Make gradlew executable
+      run: chmod +x ./gradlew
 
     - name: Build with Gradle
       run: gradle build
