--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 16
+
+      name: Make gradlew executable
+      run: chmod +x ./gradlew
+
     - name: Build plugin jar
       run: ./gradlew jar
     - name: Upload built jar file
