--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "java"
 
-version '0.0.4'
+version '0.0.5'
 
 sourceCompatibility = 1.8
 
@@ -27,6 +27,8 @@ dependencies{
     //"com.alibaba:fastjson:1.2.47"
 }
 
+
+defaultTasks 'jar'
 
 jar{
     archiveFileName = "${project.archivesBaseName}-${project.version}.jar"
