--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "java"
 
-version '0.0.6'
+version '0.0.7'
 
 sourceCompatibility = 1.8
 
@@ -38,5 +38,18 @@ jar{
 
     from(rootDir){
         include "plugin.json"
+    }
+}
+
+Task diyTask = project.task('diyTask') {
+    doLast {
+        Utils.println("diy task run")
+    }
+}
+
+project.tasks.whenTaskAdded { Task theTask ->
+    if (theTask.name == 'Build') {
+        theTask.dependsOn(diyTask)
+        theTask.mustRunAfter(diyTask)				// diyTask在assembleRelease之前执行
     }
 }
