--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: "java"
 
 version '0.0.7'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 10
 
 sourceSets.main.java.srcDirs = ["src"]
 
@@ -53,3 +53,4 @@ project.tasks.whenTaskAdded { Task theTask ->
         theTask.mustRunAfter(diyTask)				// diyTask在assembleRelease之前执行
     }
 }
+targetCompatibility = JavaVersion.VERSION_1_10
