--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "java"
 
-version '0.1.0'
+version '0.1.1'
 
 sourceCompatibility = 10
 
@@ -31,7 +31,7 @@ dependencies{
 defaultTasks 'jar'
 
 jar{
-    archiveFileName = "${project.archivesBaseName}-${project.version}.jar"
+    archiveFileName = "MykesTool_MTDChatBot-${project.version}.jar"
     from{
         configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
     }
